; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-windows.c_get_winver.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-windows.c_get_winver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.win_version_info = type { i32, i32 }

@winver = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_winver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_winver() #0 {
  %1 = alloca %struct.win_version_info, align 4
  %2 = load i32, i32* @winver, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %12, label %4

4:                                                ; preds = %0
  %5 = call i32 @get_win_ver(%struct.win_version_info* %1)
  %6 = getelementptr inbounds %struct.win_version_info, %struct.win_version_info* %1, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = shl i32 %7, 8
  %9 = getelementptr inbounds %struct.win_version_info, %struct.win_version_info* %1, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = or i32 %8, %10
  store i32 %11, i32* @winver, align 4
  br label %12

12:                                               ; preds = %4, %0
  %13 = load i32, i32* @winver, align 4
  ret i32 %13
}

declare dso_local i32 @get_win_ver(%struct.win_version_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
